// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen renders data state 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "padding": 20,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/assets/images/background.jpg",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <RCTSafeAreaView
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <RCTScrollView
      alwaysBounceHorizontal={false}
      alwaysBounceVertical={false}
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      showsHorizontalScrollIndicator={false}
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Medium",
                "fontSize": 30,
              }
            }
            testID="name"
          >
            London
          </Text>
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Medium",
                "fontSize": 14,
              }
            }
            testID="region"
          >
            City of London, Greater London, United Kingdom
          </Text>
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
                "marginTop": 10,
              }
            }
            testID="updatedText"
          >
            Updated 7 hours ago
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "column",
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-SemiBold",
                  "fontSize": 100,
                }
              }
            >
              8
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Medium",
                  "fontSize": 40,
                  "marginTop": 30,
                }
              }
            >
              °C
            </Text>
            <Text
              style={
                {
                  "alignSelf": "flex-end",
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Light",
                  "fontSize": 18,
                  "marginBottom": 30,
                  "marginLeft": -30,
                }
              }
            >
              Feels like 5.2°C
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                {
                  "uri": "https://cdn.weatherapi.com/weather/64x64/day/113.png",
                }
              }
              style={
                {
                  "height": 50,
                  "marginRight": 10,
                  "width": 50,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Medium",
                  "fontSize": 30,
                }
              }
            >
              Sunny
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0, 0.2)",
              "borderColor": "#FFFFFF",
              "borderRadius": 14,
              "borderWidth": 2,
              "marginVertical": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 14,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Bold",
                "fontSize": 16,
                "margin": 8,
              }
            }
            testID="label"
          >
            HOURLY FORECAST
          </Text>
          <RCTScrollView
            alwaysBounceHorizontal={false}
            alwaysBounceVertical={false}
            data={
              [
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/296.png",
                  "tempC": 9,
                  "title": "12 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/122.png",
                  "tempC": 9,
                  "title": "1 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/116.png",
                  "tempC": 8,
                  "title": "2 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/116.png",
                  "tempC": 8,
                  "title": "3 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/116.png",
                  "tempC": 7,
                  "title": "4 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/116.png",
                  "tempC": 7,
                  "title": "5 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/122.png",
                  "tempC": 7,
                  "title": "6 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/116.png",
                  "tempC": 8,
                  "title": "7 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/116.png",
                  "tempC": 9,
                  "title": "8 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/116.png",
                  "tempC": 10,
                  "title": "9 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/122.png",
                  "tempC": 11,
                  "title": "10 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/176.png",
                  "tempC": 12,
                  "title": "11 AM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/353.png",
                  "tempC": 12,
                  "title": "12 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/176.png",
                  "tempC": 13,
                  "title": "1 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/353.png",
                  "tempC": 13,
                  "title": "2 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/353.png",
                  "tempC": 12,
                  "title": "3 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/353.png",
                  "tempC": 11,
                  "title": "4 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/353.png",
                  "tempC": 11,
                  "title": "5 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/353.png",
                  "tempC": 10,
                  "title": "6 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/122.png",
                  "tempC": 9,
                  "title": "7 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/122.png",
                  "tempC": 9,
                  "title": "8 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/353.png",
                  "tempC": 9,
                  "title": "9 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/122.png",
                  "tempC": 9,
                  "title": "10 PM",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/night/122.png",
                  "tempC": 9,
                  "title": "11 PM",
                },
              ]
            }
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={true}
            keyExtractor={[Function]}
            onContentSizeChange={[Function]}
            onLayout={[Function]}
            onMomentumScrollBegin={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            removeClippedSubviews={false}
            renderItem={[Function]}
            scrollEventThrottle={50}
            showsHorizontalScrollIndicator={false}
            showsVerticalScrollIndicator={false}
            stickyHeaderIndices={[]}
            viewabilityConfigCallbackPairs={[]}
          >
            <View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    12 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/night/296.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    9°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    1 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/night/122.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    9°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    2 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/night/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    8°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    3 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/night/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    8°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    4 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/night/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    7°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    5 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/night/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    7°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    6 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/122.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    7°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    7 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    8°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    8 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    9°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    9 AM
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    10°C
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "width": 0,
                  }
                }
              />
            </View>
          </RCTScrollView>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0, 0.2)",
              "borderColor": "#FFFFFF",
              "borderRadius": 14,
              "borderWidth": 2,
              "marginVertical": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 14,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontFamily": "OpenSans-Bold",
                "fontSize": 16,
                "margin": 8,
              }
            }
            testID="label"
          >
            DAILY FORECAST
          </Text>
          <RCTScrollView
            alwaysBounceHorizontal={false}
            alwaysBounceVertical={false}
            data={
              [
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/302.png",
                  "subTitle": "Mar 24",
                  "tempC": 10,
                  "title": "Fri",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/176.png",
                  "subTitle": "Mar 25",
                  "tempC": 10,
                  "title": "Sat",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/176.png",
                  "subTitle": "Mar 26",
                  "tempC": 7,
                  "title": "Sun",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/116.png",
                  "subTitle": "Mar 27",
                  "tempC": 6,
                  "title": "Mon",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/122.png",
                  "subTitle": "Mar 28",
                  "tempC": 5,
                  "title": "Tue",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/302.png",
                  "subTitle": "Mar 29",
                  "tempC": 8,
                  "title": "Wed",
                },
                {
                  "icon": "//cdn.weatherapi.com/weather/64x64/day/176.png",
                  "subTitle": "Mar 30",
                  "tempC": 10,
                  "title": "Thu",
                },
              ]
            }
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={true}
            keyExtractor={[Function]}
            onContentSizeChange={[Function]}
            onLayout={[Function]}
            onMomentumScrollBegin={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            removeClippedSubviews={false}
            renderItem={[Function]}
            scrollEventThrottle={50}
            showsHorizontalScrollIndicator={false}
            showsVerticalScrollIndicator={false}
            stickyHeaderIndices={[]}
            viewabilityConfigCallbackPairs={[]}
          >
            <View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    Fri
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12,
                      }
                    }
                  >
                    Mar 24
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/302.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    10°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    Sat
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12,
                      }
                    }
                  >
                    Mar 25
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/176.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    10°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    Sun
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12,
                      }
                    }
                  >
                    Mar 26
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/176.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    7°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    Mon
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12,
                      }
                    }
                  >
                    Mar 27
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/116.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    6°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    Tue
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12,
                      }
                    }
                  >
                    Mar 28
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/122.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    5°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    Wed
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12,
                      }
                    }
                  >
                    Mar 29
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/302.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    8°C
                  </Text>
                </View>
              </View>
              <View
                onFocusCapture={[Function]}
                onLayout={[Function]}
                style={
                  [
                    {
                      "flexDirection": "row",
                    },
                    null,
                  ]
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "paddingHorizontal": 14,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    Thu
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-Regular",
                        "fontSize": 12,
                      }
                    }
                  >
                    Mar 30
                  </Text>
                  <Image
                    source={
                      {
                        "uri": "https://cdn.weatherapi.com/weather/64x64/day/176.png",
                      }
                    }
                    style={
                      {
                        "height": 50,
                        "marginVertical": 4,
                        "width": 50,
                      }
                    }
                  />
                  <Text
                    style={
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "OpenSans-SemiBold",
                        "fontSize": 16,
                      }
                    }
                  >
                    10°C
                  </Text>
                </View>
              </View>
            </View>
          </RCTScrollView>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0, 0.2)",
              "borderColor": "#FFFFFF",
              "borderRadius": 14,
              "borderWidth": 2,
              "flexDirection": "row",
              "marginVertical": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 14,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRightColor": "#FFFFFF",
                "borderRightWidth": 2,
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              87 %
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Humidity
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "borderRightColor": "#FFFFFF",
                "borderRightWidth": 2,
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              2 of 10
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              UV Index
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              10 km
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Visibility
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0, 0.2)",
              "borderColor": "#FFFFFF",
              "borderRadius": 14,
              "borderWidth": 2,
              "flexDirection": "row",
              "marginVertical": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 14,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRightColor": "#FFFFFF",
                "borderRightWidth": 2,
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              0 mm
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Precipitation
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "borderRightColor": "#FFFFFF",
                "borderRightWidth": 2,
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              27.4 kph
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Gust
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              998 mb
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Pressure
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(0,0,0, 0.2)",
              "borderColor": "#FFFFFF",
              "borderRadius": 14,
              "borderWidth": 2,
              "flexDirection": "row",
              "marginVertical": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 14,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRightColor": "#FFFFFF",
                "borderRightWidth": 2,
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              16.9 kph
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Wind Speed
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "borderRightColor": "#FFFFFF",
                "borderRightWidth": 2,
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              SW
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Direction
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 20,
                }
              }
            >
              220°
            </Text>
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontFamily": "OpenSans-Regular",
                  "fontSize": 16,
                }
              }
            >
              Degree
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RCTSafeAreaView>
</View>
`;

exports[`HomeScreen renders error state 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "padding": 20,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/assets/images/background.jpg",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <RCTSafeAreaView
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        Something went wrong!
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`HomeScreen renders loading state 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    {
      "flex": 1,
      "flexDirection": "column",
      "padding": 20,
    }
  }
>
  <Image
    source={
      {
        "testUri": "../../../src/assets/images/background.jpg",
      }
    }
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <RCTSafeAreaView
    style={
      {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "borderColor": "#000000",
              "borderRadius": 25,
              "borderTopColor": "#FFFFFF",
              "borderWidth": 2,
              "height": 50,
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
              "width": 50,
            }
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
